Move apt command.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,10 @@ compiler:
 
 addons:
   apt:
-    packages:
-      - cmake
-      - libxml2-dev
-      - mpich
+    update: true
 
 before_install:
+  - sudo apt-get -y install libxml2-dev mpich
   - test -n $CC && unset CC
 
 before_script:
