--- a/.travis.yml
+++ b/.travis.yml
@@ -17,20 +17,17 @@ before_script:
   - cd build
   - cmake ..
 
-jobs:
-  include:
-    - stage: Build
-      script: make
-    - stage: Test
-      script: mpirun ./sboxgates -b ../sboxes/identity.txt -vv -a 10694 -i 3
-      script: mpirun ./sboxgates -b ../sboxes/linear.txt -vv -a 10694 -i 3
-      script: mpirun ./sboxgates -b ../sboxes/des_s1.txt -vv -a 10694 -i 3
-      script: mpirun ./sboxgates -b ../sboxes/crypto1_fa.txt -vv -a 10694 -i 3
-      script: mpirun ./sboxgates -b ../sboxes/crypto1_fb.txt -vv -a 10694 -i 3
-      script: mpirun ./sboxgates -b ../sboxes/crypto1_fc.txt -vv -a 10694 -i 3
-      script: mpirun ./sboxgates -b ../sboxes/identity.txt -vv -i 3
-      script: mpirun ./sboxgates -b ../sboxes/linear.txt -vv -i 3
-      script: mpirun ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3
-      script: mpirun ./sboxgates -b ../sboxes/crypto1_fa.txt -vv -i 3
-      script: mpirun ./sboxgates -b ../sboxes/crypto1_fb.txt -vv -i 3
-      script: mpirun ./sboxgates -b ../sboxes/crypto1_fc.txt -vv -i 3
+script:
+  - make
+  - mpirun ./sboxgates -b ../sboxes/identity.txt -vv -a 10694 -i 3
+  - mpirun ./sboxgates -b ../sboxes/linear.txt -vv -a 10694 -i 3
+  - mpirun ./sboxgates -b ../sboxes/des_s1.txt -vv -a 10694 -i 3
+  - mpirun ./sboxgates -b ../sboxes/crypto1_fa.txt -vv -a 10694 -i 3
+  - mpirun ./sboxgates -b ../sboxes/crypto1_fb.txt -vv -a 10694 -i 3
+  - mpirun ./sboxgates -b ../sboxes/crypto1_fc.txt -vv -a 10694 -i 3
+  - mpirun ./sboxgates -b ../sboxes/identity.txt -vv -i 3
+  - mpirun ./sboxgates -b ../sboxes/linear.txt -vv -i 3
+  - mpirun ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3
+  - mpirun ./sboxgates -b ../sboxes/crypto1_fa.txt -vv -i 3
+  - mpirun ./sboxgates -b ../sboxes/crypto1_fb.txt -vv -i 3
+  - mpirun ./sboxgates -b ../sboxes/crypto1_fc.txt -vv -i 3
