--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ before_script:
 
 script:
   - make
-  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3 -o 0
-  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3 -g 1*.xml
+  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3 -o 0 -s
+  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3 -s -g 1*.xml
   - rm *.xml
-  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -a 10694 -i 3
+  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -a 10694 -i 3 -p 63
   - ./sboxgates -d 4*.xml | dot -Tpng > /dev/null
   - ./sboxgates -c 4*.xml > test.c
   - $CC -c -Wall -Wpedantic -Werror test.c
