--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: c
 dist: focal
 compiler:
-  - clang
   - gcc
 
 addons:
@@ -14,13 +13,17 @@ addons:
       - mpich
       - nvidia-cuda-toolkit
 
+before_install:
+  - pip install --user cpp-coveralls
+
 before_script:
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake -DENABLE_COVERAGE=ON ..
 
 script:
   - make
+  - ./sboxgates -h
   - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3 -o 0 -s
   - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3 -s -g 1*.xml
   - rm *.xml
@@ -33,3 +36,7 @@ script:
   - ./sboxgates -d 1*.xml | dot -Tpng > /dev/null
   - ./sboxgates -c 1*.xml > test.cu
   - nvcc -c test.cu
+
+after_success:
+  - cd ..
+  - coveralls --gcov-options '\-lp' -E '.*CMake.*'
