--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
   - ./sboxgates -c 4*.xml > test.c
   - $CC -c -Wall -Wpedantic -Werror test.c
   - rm *.xml *.c
-  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -a 10694 -l -o 0
+  - mpirun -N 10 ./sboxgates -b ../sboxes/rijndael.txt -vv -a 10694 -l -o 0
   - ./sboxgates -d 1*.xml | dot -Tpng > /dev/null
   - ./sboxgates -c 1*.xml > test.cu
   - nvcc -c test.cu
