Replace getopt with argp.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,15 +24,15 @@ script:
   - cmake -DENABLE_COVERAGE=ON ..
   - make
   - ./sboxgates -h
-  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3 -o 0 -s -n
-  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -i 3 -s -n -g 1*.xml
+  - mpirun -N 4 ./sboxgates -vv -i 3 -o 0 -s -n ../sboxes/des_s1.txt
+  - mpirun -N 4 ./sboxgates -vv -i 3 -s -n -g 1*.xml ../sboxes/des_s1.txt
   - rm *.xml
-  - mpirun -N 4 ./sboxgates -b ../sboxes/des_s1.txt -vv -a 10694 -i 3 -p 63
+  - mpirun -N 4 ./sboxgates -vv -a 10694 -i 3 -p 63 ../sboxes/des_s1.txt
   - ./sboxgates -d 4*.xml | dot -Tpng > /dev/null
   - ./sboxgates -c 4*.xml > test.c
   - $CC -c -Wall -Wpedantic -Werror test.c
-  - rm *.xml *.c
-  - mpirun -N 10 ./sboxgates -b ../sboxes/des_s1.txt -vv -a 10694 -l -o 0
+  - rm *.xml *.c *.o
+  - mpirun -N 10 ./sboxgates -vv -a 10694 -l -o 0 ../sboxes/des_s1.txt
   - ./sboxgates -d 1*.xml | dot -Tpng > /dev/null
   - ./sboxgates -c 1*.xml > test.cu
   - nvcc -c test.cu
