--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 script:
   - cmake -DENABLE_COVERAGE=ON ..
   - make
-  - ./sboxgates -h
+  - ./sboxgates --help
   - mpirun -N 4 ./sboxgates -vv -i 3 -o 0 -s -n ../sboxes/des_s1.txt
   - mpirun -N 4 ./sboxgates -vv -i 3 -s -n -g 1*.xml ../sboxes/des_s1.txt
   - rm *.xml
