--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
   - '! ./sboxgates nonexisting.txt'
   - '! ./sboxgates -o 7 ../sboxes/des_s1.txt'
   - mpirun -N 4 ./sboxgates -vv -i 3 -o 0 -s -n ../sboxes/des_s1.txt
-  - mpirun -N 4 ./sboxgates -vv -i 3 -s -n -g 1*.xml ../sboxes/des_s1.txt
+  - mpirun -N 4 ./sboxgates -vv -i 3 -s -n ../sboxes/des_s1.txt -g 1*.xml
   - rm *.xml
   - mpirun -N 4 ./sboxgates -vv -a 10694 -i 3 -p 63 ../sboxes/des_s1.txt
   - ./sboxgates -d 4*.xml | dot -Tpng > /dev/null
